公共文件打开完成,vue以commonChunk加载

--- a/src/assets/mui/mui.css
+++ b/src/assets/mui/mui.css
@@ -5019,7 +5019,7 @@ body > .mui-progressbar
     font-weight: normal;
     font-style: normal;
 
-    src: url('../fonts/mui.ttf') format('truetype');
+    src: url('./mui.ttf') format('truetype');
 }
 .mui-icon
 {
